fix gradient z-index

--- a/css/site.styl
+++ b/css/site.styl
@@ -133,7 +133,7 @@ img
   top: 0
   left: 0
   right: 0
-  z-index: 999
+  z-index: 888
   padding: $margin-basic 0 $margin-basic 0
   background-color: $color-white-soft
 
@@ -168,6 +168,7 @@ img
   right: 0
   bottom: 0
   width: 10%
+  z-index: 999
   background-image: linear-gradient(to right, rgba(230,230,230,0) 0%,rgba(216,216,216,0.33) 33%,rgba(63,63,63,0.7) 70%,rgba(19,19,19,1) 100%)
 
 #loading
